test/core/errors/offsets_error/zs/array_no_index_error.zs
package array_no_index_error;

struct ArrayNoIndexError
{
    uint32 offsets[];
offsets:
    uint32 values[];
};
